[package]
name = "profile_counter"
version = "0.1.0"
authors = ["Jon Grimes <jon.grimes@aptible.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0"
actix-utils = "1.0.3"
actix-files = "0.2.1"
chrono = "0.4"
svg = "0.8.0"
sqlx = { version = "0.3", features = [ "postgres", "macros", "chrono" ]}
serde = "1.0.106"
serde_json = "1.0.51"

env_logger = "0.7"
futures = "0.3.1"
